Ensure logo is displayed

--- a/BorsukSoftware.Conical.Tools.AWSDeviceFarmResultsUploader/BorsukSoftware.Conical.Tools.AWSDeviceFarmResultsUploader.csproj
+++ b/BorsukSoftware.Conical.Tools.AWSDeviceFarmResultsUploader/BorsukSoftware.Conical.Tools.AWSDeviceFarmResultsUploader.csproj
@@ -8,6 +8,7 @@
 		<Copyright>Borsuk Software</Copyright>
 		<PackageTags>borsuksoftware;conical;aws;devicefarm;awsdevicefarm</PackageTags>
 		<PackAsTool>True</PackAsTool>
+		<PackageIcon>conical.png</PackageIcon>
 	</PropertyGroup>
 
   <ItemGroup>
